tools/swmm-reader/swmm_reader/outputapi.py


getAttribute = 0 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 54

getResult = (getAttribute + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 54

SMO_apiFunction = enum_anon_3 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 54

enum_anon_4 = c_int # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 62

subcatch = 0 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 62

node = (subcatch + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 62

link = (node + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 62

_sys = (link + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 62

SMO_elementType = enum_anon_4 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 62

enum_anon_5 = c_int # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 69

reportStep = 0 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 69

numPeriods = (reportStep + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 69

SMO_time = enum_anon_5 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 69

enum_anon_6 = c_int # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

rainfall_subcatch = 0 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

snow_depth_subcatch = (rainfall_subcatch + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

evap_loss = (snow_depth_subcatch + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

infil_loss = (evap_loss + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

runoff_rate = (infil_loss + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

gwoutflow_rate = (runoff_rate + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

gwtable_elev = (gwoutflow_rate + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

soil_moisture = (gwtable_elev + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

pollutant_conc_subcatch = (soil_moisture + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

SMO_subcatchAttribute = enum_anon_6 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 82

enum_anon_7 = c_int # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 93

invert_depth = 0 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 93

hydraulic_head = (invert_depth + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 93

stored_ponded_volume = (hydraulic_head + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 93

lateral_inflow = (stored_ponded_volume + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 93

total_inflow = (lateral_inflow + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 93

flooding_losses = (total_inflow + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 93

pollutant_conc_node = (flooding_losses + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 93

SMO_nodeAttribute = enum_anon_7 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 93

enum_anon_8 = c_int # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 103

flow_rate_link = 0 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 103

flow_depth = (flow_rate_link + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 103

flow_velocity = (flow_depth + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 103

flow_volume = (flow_velocity + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 103

capacity = (flow_volume + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 103

pollutant_conc_link = (capacity + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 103

SMO_linkAttribute = enum_anon_8 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 103

enum_anon_9 = c_int # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

air_temp = 0 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

rainfall_system = (air_temp + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

snow_depth_system = (rainfall_system + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

evap_infil_loss = (snow_depth_system + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

runoff_flow = (evap_infil_loss + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

dry_weather_inflow = (runoff_flow + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

groundwater_inflow = (dry_weather_inflow + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

RDII_inflow = (groundwater_inflow + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

direct_inflow = (RDII_inflow + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

total_lateral_inflow = (direct_inflow + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

flood_losses = (total_lateral_inflow + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

outfall_flows = (flood_losses + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

volume_stored = (outfall_flows + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

evap_rate = (volume_stored + 1) # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

SMO_systemAttribute = enum_anon_9 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 121

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 138
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_init'):
        continue
    SMO_init = _lib.SMO_init
    SMO_init.argtypes = []
    SMO_init.restype = POINTER(SMOutputAPI)
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 139
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_open'):
        continue
    SMO_open = _lib.SMO_open
    SMO_open.argtypes = [POINTER(SMOutputAPI), String]
    SMO_open.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 141
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getProjectSize'):
        continue
    SMO_getProjectSize = _lib.SMO_getProjectSize
    SMO_getProjectSize.argtypes = [POINTER(SMOutputAPI), SMO_elementCount, POINTER(c_int)]
    SMO_getProjectSize.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 143
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getUnits'):
        continue
    SMO_getUnits = _lib.SMO_getUnits
    SMO_getUnits.argtypes = [POINTER(SMOutputAPI), SMO_unit, POINTER(c_int)]
    SMO_getUnits.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 144
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getStartTime'):
        continue
    SMO_getStartTime = _lib.SMO_getStartTime
    SMO_getStartTime.argtypes = [POINTER(SMOutputAPI), POINTER(c_double)]
    SMO_getStartTime.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 145
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getTimes'):
        continue
    SMO_getTimes = _lib.SMO_getTimes
    SMO_getTimes.argtypes = [POINTER(SMOutputAPI), SMO_time, POINTER(c_int)]
    SMO_getTimes.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 147
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getElementName'):
        continue
    SMO_getElementName = _lib.SMO_getElementName
    SMO_getElementName.argtypes = [POINTER(SMOutputAPI), SMO_elementType, c_int, String, c_int]
    SMO_getElementName.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 150
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_newOutValueSeries'):
        continue
    SMO_newOutValueSeries = _lib.SMO_newOutValueSeries
    SMO_newOutValueSeries.argtypes = [POINTER(SMOutputAPI), c_long, c_long, POINTER(c_long), POINTER(c_int)]
    SMO_newOutValueSeries.restype = POINTER(c_float)
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 152
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_newOutValueArray'):
        continue
    SMO_newOutValueArray = _lib.SMO_newOutValueArray
    SMO_newOutValueArray.argtypes = [POINTER(SMOutputAPI), SMO_apiFunction, SMO_elementType, POINTER(c_long), POINTER(c_int)]
    SMO_newOutValueArray.restype = POINTER(c_float)
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 155
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getSubcatchSeries'):
        continue
    SMO_getSubcatchSeries = _lib.SMO_getSubcatchSeries
    SMO_getSubcatchSeries.argtypes = [POINTER(SMOutputAPI), c_int, SMO_subcatchAttribute, c_long, c_long, POINTER(c_float)]
    SMO_getSubcatchSeries.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 157
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getNodeSeries'):
        continue
    SMO_getNodeSeries = _lib.SMO_getNodeSeries
    SMO_getNodeSeries.argtypes = [POINTER(SMOutputAPI), c_int, SMO_nodeAttribute, c_long, c_long, POINTER(c_float)]
    SMO_getNodeSeries.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 159
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getLinkSeries'):
        continue
    SMO_getLinkSeries = _lib.SMO_getLinkSeries
    SMO_getLinkSeries.argtypes = [POINTER(SMOutputAPI), c_int, SMO_linkAttribute, c_long, c_long, POINTER(c_float)]
    SMO_getLinkSeries.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 161
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getSystemSeries'):
        continue
    SMO_getSystemSeries = _lib.SMO_getSystemSeries
    SMO_getSystemSeries.argtypes = [POINTER(SMOutputAPI), SMO_systemAttribute, c_long, c_long, POINTER(c_float)]
    SMO_getSystemSeries.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 164
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getSubcatchAttribute'):
        continue
    SMO_getSubcatchAttribute = _lib.SMO_getSubcatchAttribute
    SMO_getSubcatchAttribute.argtypes = [POINTER(SMOutputAPI), c_long, SMO_subcatchAttribute, POINTER(c_float)]
    SMO_getSubcatchAttribute.restype = c_int
    break
